--- a/Apps/SpringRest-mongodb-demo/src/main/resources/templates/todo.html
+++ b/Apps/SpringRest-mongodb-demo/src/main/resources/templates/todo.html
@@ -1,43 +1,78 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-
-<title>ToDo Demo</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
-          th:href="@{/webjars/bootstrap/3.3.4/css/bootstrap.min.css}"
-          rel="stylesheet" media="screen" />
-
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
-            th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
+<html>
+<head>
+<title>AngularJS + Spring Rest + Mongo Demo App</title>
+<link href="../static/css/bootstrap.min.css"
+	th:href="@{css/bootstrap.min.css}" rel="stylesheet" media="screen" />
+<link href="../static/css/style.css" th:href="@{css/style.css}"
+	rel="stylesheet" media="screen" />
 </head>
-<body>
-<center>
-	 <div class="container">
-	 <h2> ToDo </h2>
-		<div th:if="${not #lists.isEmpty(tasks)}">
-			
-			<table class="table table-striped">
-				<tr>
-					<th>Id</th>
-					<th>Task Name</th>
-					<th>Description</th>
-					<th>Actions</th>
-				</tr>
-				<tr th:each="ToDo : ${tasks}">
-					<td th:text="${ToDo.id}">Id</td>
-					<td th:text="${ToDo.taskName}">Movie Name</td>
-					<td th:text="${ToDo.takDescription}">Language</td>
-					<td><a th:href="'/deleteTask?id=' + ${ToDo.id}">Delete </a> &nbsp; /&nbsp;
-						<a th:href="'/EditTask?id=' + ${ToDo.id}">Edit </a></td> 
-				</tr>
-			</table>
-			
+
+<body ng-app="myApp" class="ng-cloak">
+
+	<script src="../static/js/angular.min.js" th:src="@{js/angular.min.js}"></script>
+	<script src="../static/js/app.js" th:src="@{js/app.js}"></script>
+	<script src="../static/js/user_service.js"
+		th:src="@{js/user_service.js}"></script>
+	<script src="../static/js/app_controller.js"
+		th:src="@{js/app_controller.js}"></script>
+	<div class="heading">
+		<img src="../static/images/cognizant-logo.png"
+			th:src="@{images/cognizant-logo.png}" alt="Cognizant"
+			title="Cognizant" border="0" style="float: left;" />
+		<h1 style="width: 440px; margin: 8px auto 0; padding: 0;">Java -
+			ToDo</h1>
+	</div>
+	<div class="content">
+		<div class="generic-container" ng-controller="AppController as ctrl">
+
+			<div class="panel-body">
+				<div class="task">
+					<form ng-submit="ctrl.submit()" name="myForm"
+						class="form-horizontal">
+						<input type="hidden" ng-model="ctrl.user.id" />
+						<table class="add-task">
+							<tr>
+								<td><input type="text" ng-model="ctrl.user.taskName"
+									id="taskName" placeholder="Enter Task Details" /></td>
+									<td><input type="submit" id="add" value="+"
+									class="btn btn-success custom-width" /></td>
+								<td><input type="submit" id="edit" value="Update"
+									class="btn btn-success custom-width disabled" /></td>
+							</tr>
+						</table>
+					</form>
+				</div>
+			</div>
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<span class="lead">List of Tasks </span>
+				</div>
+				<div class="tablecontainer">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>Id</th>
+								<th>Task Details</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="u in ctrl.users">
+								<td><span ng-bind="u.id"></span></td>
+								<td><span ng-bind="u.taskName"></span></td>
+								<td>
+									<button type="button" ng-click="ctrl.edit(u.id)"
+										class="btn btn-success custom-width">Edit</button>
+									<button type="button" ng-click="ctrl.remove(u.id)"
+										class="btn btn-danger custom-width">Remove</button>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
 		</div>
-		<table class="table table-striped">
-    <tr><td></td><td>Do you Wanna add a Task</td><td></td><td> <a href="#" th:href="@{/CreateTask}">Click Here</a></td></tr>
-    </table>
-	</div> 
-</center>
+	</div>
+
 </body>
 </html>
