--- a/Apps/springboot-mvc-mongodb/src/main/resources/templates/index.html
+++ b/Apps/springboot-mvc-mongodb/src/main/resources/templates/index.html
@@ -1,15 +1,87 @@
-<!DOCTYPE html>
 <html>
-<head lang="en">
-
-<title>Spring Boot Mongo DB REST API Demo</title>
-
-<!--/*/ <th:block th:include="thymeleafHeader/header :: head"></th:block> /*/-->
+<head>
+<title>AngularJS + Spring Boot + Mongo Demo Application</title>
+<link href="../static/css/bootstrap.min.css"
+	th:href="@{css/bootstrap.min.css}" rel="stylesheet" media="screen" />
+<link href="../static/css/style.css" th:href="@{css/style.css}"
+	rel="stylesheet" media="screen" />
 </head>
-<body>
 
-	<div class="container">
-		<!--/*/ <th:block th:include="thymeleafHeader/menuheader :: header"></th:block> /*/-->
+<body ng-app="myApp" class="ng-cloak">
+
+	<script src="../static/js/angular.min.js" th:src="@{js/angular.min.js}"></script>
+	<script src="../static/js/app.js" th:src="@{js/app.js}"></script>
+	<script src="../static/js/user_service.js"
+		th:src="@{js/user_service.js}"></script>
+	<script src="../static/js/app_controller.js"
+		th:src="@{js/app_controller.js}"></script>
+	<div class="heading">
+		<img src="../static/images/cognizant-logo.png" th:src="@{images/cognizant-logo.png}"
+			alt="Cognizant" title="Cognizant" border="0" style="float: left;" />
+		<h1 style="width: 510px; margin: 8px auto 0; padding: 0;">Java - Employee Management</h1>
 	</div>
+	<div class="content">
+	<div class="generic-container" ng-controller="AppController as ctrl">
+
+		<div class="panel-body">
+			<div class="task">
+				<form ng-submit="ctrl.submit()" name="myForm"
+					class="form-horizontal">
+					<input type="hidden" ng-model="ctrl.user.id" />
+					<table class="add-task">
+						<tr>
+							<td>First Name</td>
+							<td><input type="text" ng-model="ctrl.user.firstName" id="firstName"
+								placeholder="Enter First name" /></td>
+						</tr>
+						<tr>
+							<td>Last Name</td>
+							<td><input type="text" ng-model="ctrl.user.lastName"
+								id="lastName" placeholder="Enter Last name" /></td>
+						</tr>
+						<tr>
+							<td><input type="submit" id="add" value="ADD"
+								class="btn btn-success custom-width" /></td>
+							<td><input type="submit" id="edit" value="Update"
+								class="btn btn-success custom-width disabled" /></td>
+						</tr>
+					</table>
+				</form>
+			</div>
+		</div>
+
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<span class="lead">List of Employee </span>
+			</div>
+			<div class="tablecontainer">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>ID</th>
+							<th>First Name</th>
+							<th>Last Name</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="u in ctrl.users">
+							<td><span ng-bind="u.id"></span></td>
+							<td><span ng-bind="u.firstName"></span></td>
+							<td><span ng-bind="u.lastName"></span></td>
+							<td>
+								<button type="button" ng-click="ctrl.edit(u.id)"
+									class="btn btn-success custom-width">Edit</button>
+								<button type="button" ng-click="ctrl.remove(u.id)"
+									class="btn btn-danger custom-width">Remove</button>
+							</td>
+
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
+
 </body>
 </html>
