Anand Kittappa updated Html File[Finishes #118194379]

--- a/Apps/SpringRest-mongodb-demo/src/main/resources/templates/todo.html
+++ b/Apps/SpringRest-mongodb-demo/src/main/resources/templates/todo.html
@@ -34,7 +34,7 @@
 							<tr>
 								<td><input type="text" ng-model="ctrl.user.taskName"
 									id="taskName" placeholder="Enter Task Details" /></td>
-									<td><input type="submit" id="add" value="+"
+									<td><input type="submit" id="add" value="Add"
 									class="btn btn-success custom-width" /></td>
 								<td><input type="submit" id="edit" value="Update"
 									class="btn btn-success custom-width disabled" /></td>
