--- a/Apps/SpringBootJPA-postgre/src/main/resources/templates/welcome.html
+++ b/Apps/SpringBootJPA-postgre/src/main/resources/templates/welcome.html
@@ -17,8 +17,8 @@
 		th:src="@{js/app_controller.js}"></script>
 	<div class="heading">
 		<img src="../static/images/cognizant-logo.png" th:src="@{images/cognizant-logo.png}"
-			alt="Cognizant" title="Cognizant" border="0" style="float: left;" />
-		<h1 style="width: 440px; margin: 8px auto 0; padding: 0;">Java - Album Management</h1>
+			alt="Cognizant" title="Cognizant" class="imgclass" />
+		<h1 class="headh">Java - Album Management</h1>
 	</div>
 	<div class="content">
 	<div class="generic-container" ng-controller="AppController as ctrl">
