--- a/Apps/SpringRest-mongodb-demo/src/main/resources/templates/todo.html
+++ b/Apps/SpringRest-mongodb-demo/src/main/resources/templates/todo.html
@@ -18,8 +18,8 @@
 	<div class="heading">
 		<img src="../static/images/cognizant-logo.png"
 			th:src="@{images/cognizant-logo.png}" alt="Cognizant"
-			title="Cognizant" border="0" style="float: left;" />
-		<h1 style="width: 440px; margin: 8px auto 0; padding: 0;">Java -
+			title="Cognizant" class="imgclass" />
+		<h1 class="headh">Java -
 			ToDo</h1>
 	</div>
 	<div class="content">
