--- a/Apps/SpringRest-mongodb-demo/src/main/resources/static/css/style.css
+++ b/Apps/SpringRest-mongodb-demo/src/main/resources/static/css/style.css
@@ -30,3 +30,14 @@ body {
     padding: 3px 2px 3px 5px;
     margin: 0 0 9px 8px;
 }
+
+.headh {
+	width: 440px;
+	margin: 8px auto 0;
+	padding: 0;
+}
+
+.imgclass {
+	float: left;
+	border:0;
+}
