--- a/Apps/SpringRest-mongodb-demo/src/main/resources/templates/todo.html
+++ b/Apps/SpringRest-mongodb-demo/src/main/resources/templates/todo.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>AngularJS + Spring Rest + Mongo Demo App</title>
@@ -7,7 +8,7 @@
 	rel="stylesheet" media="screen" />
 </head>
 
-<body ng-app="myApp" class="ng-cloak">
+<body data-ng-app="myApp" class="ng-cloak">
 
 	<script src="../static/js/angular.min.js" th:src="@{js/angular.min.js}"></script>
 	<script src="../static/js/app.js" th:src="@{js/app.js}"></script>
@@ -23,16 +24,16 @@
 			ToDo</h1>
 	</div>
 	<div class="content">
-		<div class="generic-container" ng-controller="AppController as ctrl">
+		<div class="generic-container" data-ng-controller="AppController as ctrl">
 
 			<div class="panel-body">
 				<div class="task">
-					<form ng-submit="ctrl.submit()" name="myForm"
+					<form data-ng-submit="ctrl.submit()" name="myForm"
 						class="form-horizontal">
-						<input type="hidden" ng-model="ctrl.user.id" />
+						<input type="hidden" data-ng-model="ctrl.user.id" />
 						<table class="add-task">
 							<tr>
-								<td><input type="text" ng-model="ctrl.user.taskName"
+								<td><input type="text" data-ng-model="ctrl.user.taskName"
 									id="taskName" placeholder="Enter Task Details" /></td>
 									<td><input type="submit" id="add" value="Add"
 									class="btn btn-success custom-width" /></td>
@@ -57,13 +58,13 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="u in ctrl.users">
-								<td><span ng-bind="u.id"></span></td>
-								<td><span ng-bind="u.taskName"></span></td>
+							<tr data-ng-repeat="u in ctrl.users">
+								<td><span data-ng-bind="u.id"></span></td>
+								<td><span data-ng-bind="u.taskName"></span></td>
 								<td>
-									<button type="button" ng-click="ctrl.edit(u.id)"
+									<button type="button" data-ng-click="ctrl.edit(u.id)"
 										class="btn btn-success custom-width">Edit</button>
-									<button type="button" ng-click="ctrl.remove(u.id)"
+									<button type="button" data-ng-click="ctrl.remove(u.id)"
 										class="btn btn-danger custom-width">Remove</button>
 								</td>
 							</tr>
