--- a/Apps/Springboot-mvc-mongodb/src/main/resources/templates/index.html
+++ b/Apps/Springboot-mvc-mongodb/src/main/resources/templates/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>AngularJS + Spring Boot + Mongo Demo Application</title>
@@ -7,7 +8,7 @@
 	rel="stylesheet" media="screen" />
 </head>
 
-<body ng-app="myApp" class="ng-cloak">
+<body data-ng-app="myApp" class="ng-cloak">
 
 	<script src="../static/js/angular.min.js" th:src="@{js/angular.min.js}"></script>
 	<script src="../static/js/app.js" th:src="@{js/app.js}"></script>
@@ -21,22 +22,22 @@
 		<h1 style="width: 510px; margin: 8px auto 0; padding: 0;">Java - Employee Management</h1>
 	</div>
 	<div class="content">
-	<div class="generic-container" ng-controller="AppController as ctrl">
+	<div class="generic-container" data-ng-controller="AppController as ctrl">
 
 		<div class="panel-body">
 			<div class="task">
-				<form ng-submit="ctrl.submit()" name="myForm"
+				<form data-ng-submit="ctrl.submit()" name="myForm"
 					class="form-horizontal">
-					<input type="hidden" ng-model="ctrl.user.id" />
+					<input type="hidden" data-ng-model="ctrl.user.id" />
 					<table class="add-task">
 						<tr>
 							<td>First Name</td>
-							<td><input type="text" ng-model="ctrl.user.firstName" id="firstName"
+							<td><input type="text" data-ng-model="ctrl.user.firstName" id="firstName"
 								placeholder="Enter First name" /></td>
 						</tr>
 						<tr>
 							<td>Last Name</td>
-							<td><input type="text" ng-model="ctrl.user.lastName"
+							<td><input type="text" data-ng-model="ctrl.user.lastName"
 								id="lastName" placeholder="Enter Last name" /></td>
 						</tr>
 						<tr>
@@ -64,14 +65,14 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="u in ctrl.users">
-							<td><span ng-bind="u.id"></span></td>
-							<td><span ng-bind="u.firstName"></span></td>
-							<td><span ng-bind="u.lastName"></span></td>
+						<tr data-ng-repeat="u in ctrl.users">
+							<td><span data-ng-bind="u.id"></span></td>
+							<td><span data-ng-bind="u.firstName"></span></td>
+							<td><span data-ng-bind="u.lastName"></span></td>
 							<td>
-								<button type="button" ng-click="ctrl.edit(u.id)"
+								<button type="button" data-ng-click="ctrl.edit(u.id)"
 									class="btn btn-success custom-width">Edit</button>
-								<button type="button" ng-click="ctrl.remove(u.id)"
+								<button type="button" data-ng-click="ctrl.remove(u.id)"
 									class="btn btn-danger custom-width">Remove</button>
 							</td>
 
