--- a/Apps/SpringBootJPA-postgre/src/main/resources/templates/welcome.html
+++ b/Apps/SpringBootJPA-postgre/src/main/resources/templates/welcome.html
@@ -50,7 +50,7 @@
 							<td><input type="submit" id="add" value="ADD"
 								class="btn btn-success custom-width" /></td>
 							<td><input type="submit" id="edit" value="Update"
-								class="btn btn-success custom-width style="display:none;" /></td>
+								class="btn btn-success custom-width" style="display:none;" /></td>
 						</tr>
 					</table>
 				</form>
