--- a/Apps/Springboot-mvc-mongodb/src/main/resources/templates/index.html
+++ b/Apps/Springboot-mvc-mongodb/src/main/resources/templates/index.html
@@ -44,7 +44,7 @@
 							<td><input type="submit" id="add" value="ADD"
 								class="btn btn-success custom-width" /></td>
 							<td><input type="submit" id="edit" value="Update"
-								class="btn btn-success custom-width style="display:none;" /></td>
+								class="btn btn-success custom-width" style="display:none;" /></td>
 						</tr>
 					</table>
 				</form>
